--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   app:
     depends_on:
       - mongodb
-    build: ./backoffice-app
+    build: ./backend-app
     restart: unless-stopped
     env_file: ./.env
     ports:
